@startuml

title Private Vocabulary Flashcard Domain Schema

class Vocabulary {
  +id : VocabularyId
  +userId : UserId
  +surface : String
  +translation : String
  +entryKind : EntryKind
  +notes : String?
  +exampleSentences : List<VocabularyExampleSentence>
  +clozeSentence : VocabularyClozeSentence?
}

class VocabularyId {
  +id : String
}

class UserId {
  +id : String
}

class VocabularyExampleSentence {
  +id : VocabularyExampleSentenceId
  +sentence : String
  +translation : String
}

class VocabularyExampleSentenceId {
  +id : String
}

class VocabularyClozeSentence {
  +id : VocabularyClozeSentenceId
  +clozeText : String
  +hint : String
  +answerTranslation : String
  +answerText : String
  +answerWords : List<String>
}

class VocabularyClozeSentenceId {
  +id : String
}

class FlashCardReview {
  +id : FlashCardId
  +userId : UserId
  +contentId : ContentId
  +isReversed : boolean
  +cardReviewData : FsrsCardState
}

class VocabularyFlashCardData {
  +id : FlashCardId
  +clozeSentence : ClozeSentenceData
  +isReversed : boolean
}

class ClozeSentenceData {
  +id : String
  +clozeText : String
  +hint : String
  +answerTranslation : String
  +answerText : String
  +answerWords : List<String>
}

class FsrsCardState {
  +json : String
}

class FlashCardId {
  +id : String
}

class ContentId {
  +id : String
}

Vocabulary --> VocabularyId
Vocabulary --> UserId
Vocabulary *-- "1..*" VocabularyExampleSentence : exampleSentences
Vocabulary *-- "0..1" VocabularyClozeSentence : clozeSentence
VocabularyExampleSentence --> VocabularyExampleSentenceId
VocabularyClozeSentence --> VocabularyClozeSentenceId

FlashCardReview --> FlashCardId
FlashCardReview --> UserId
FlashCardReview --> ContentId
FlashCardReview --> FsrsCardState
VocabularyFlashCardData --> FlashCardId
VocabularyFlashCardData *-- "1" ClozeSentenceData

note right of FlashCardReview
Rendering contract:
- flashcard identity and FSRS state remain vocabulary-based
- active study rendering uses sentence cloze cards instead of raw vocabulary cards
- active cloze study mode should bind to reversed vocabulary flashcards
- each vocabulary contributes at most one active cloze sentence at a time
- raw front/back vocabulary rendering is deprecated and should not be used by active study flows
- GOOD review deletes the current cloze sentence so future generation can attach a new one

Storage rule:
- No vocabulary text/examples are stored in flashcard rows.
- Flashcard aggregate keeps only stable references + FSRS state.
end note

note right of VocabularyFlashCardData
Single domain data flow point for vocabulary cards:
- fetched vocabulary content -> VocabularyFlashCardData -> response view
- no direct adapter-to-response mapping in service flow
- front view: clozeText + hint
- back view: answerWords only
- hint is sentence-specific and must not be derived from vocabulary.translation
end note

note left of FlashCardReview
Module boundaries:
- vocabulary aggregate ownership:
  language_learning_system/domain/vocabulary
- flashcard aggregate ownership:
  flashcards_study/domain/models
- relation is by stable ID reference (contentId), not by embedding.
end note

note bottom of Vocabulary
Vocabulary remains the single source of lexical content and generated cloze study content.
Flashcards keep references only.
end note

note bottom of FlashCardReview
Private vocabulary cards are generated on vocabulary create/update.
Sentence cloze study should reuse reversed vocabulary card refs.
They are fetched via:
GET /api/v1/vocabulary-flashcards/cards/*
end note

@enduml
